fixed header logo overflow; some text wrap issues on order page and footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -18,6 +18,7 @@
 	text-align: center;
 	font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
 		"Lucida Sans", Arial, sans-serif;
+	display: inline;
 }
 
 .newsletter_link {
@@ -62,10 +63,13 @@
 	max-width: 240px;
 	margin: 0 auto;
 	padding: 1rem;
+	/* justify-content: center; */
+	text-align: center;
+
 }
 
 .link_items {
-	text-align: left;
+	text-align: center;
 	width: 100%;
 	box-sizing: border-box;
 }
@@ -151,7 +155,7 @@
 		flex-direction: column;
 	}
 	.links_column {
-		max-width: 200px;
+		/* max-width: 200px; */
 		flex-shrink: 1;
 	}
 }
