--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -122,7 +122,7 @@
 }
 
 .nav-logo-2 {
-	/* height: 90px; */
+	height: 100%;
 	width: 240px;
 
 	padding: 0px 10px 4px 10px;
