--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -98,4 +98,6 @@
 
 .phone_heading {
 	margin-bottom: 3rem;
+	display: inline;
+	text-align: center;
 }
